# node-qr-code

./: Cargo.toml  README.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
c/: qr-code.c  qrcodegen.c  qrcodegen.h
lib/: lib.d.ts  lib.js
src/: lib.js  lib.rs  lib.ts  qr-code.c
test/: test.js
tests/: tests.test.js  tests.test.ts
