[package]
name = "magic-qr-code"
version = "2.0.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/node-qr-code"
homepage = "https://magiclen.org/node-qrcode/"
keywords = ["node.js", "QR", "generator"]
categories = []
description = "Encode QR Code by using N-API."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
qrcode-generator = "4"

[dependencies.qrcode-segments-optimizer]
git = "https://github.com/magiclen/qrcode-segments-optimizer"
branch = "master"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
