[package]
name = "magic-qr-code"
version = "4.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/node-qr-code"
homepage = "https://magiclen.org/node-qrcode/"
keywords = ["nodejs", "QR", "generator"]
categories = []
description = "Encode QR Code by using N-API."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

qrcode-generator = "5"

[build-dependencies]
napi-build = "2"

[dependencies.qrcode-segments-optimizer]
git = "https://github.com/magiclen/qrcode-segments-optimizer"
branch = "master"